--- a/package.json
+++ b/package.json
@@ -1,12 +1,31 @@
 {
   "name": "eco-route-planner-frontend",
-    "@types/leaflet": "^1.9.20",
-    "autoprefixer": "^10.4.21",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "axios": "^1.11.0",
     "leaflet": "^1.9.4",
-    "lucide-react": "^0.542.0",
-    "postcss": "^8.5.6",
     "react-leaflet": "^5.0.0",
-    "tailwindcss": "^4.1.12"
+    "lucide-react": "^0.542.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@types/leaflet": "^1.9.20",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.2.2",
+    "vite": "^5.2.0",
+    "tailwindcss": "^4.1.12",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6"
   }
 }
